# aca-chaos-lab

./: .gitignore  README.md  azure.yaml  this.code-workspace
.github/: copilot-instructions.md
.github/prompts/: spec-driven-workflow-v1.md
.github/workflows/: ci.yml  validate-requirements.yml
docs/: analysis-action-2025-07-25.md  api.md  deployment.md  design-action-2025-07-28.md  design.md  requirements.md  validation-action-2025-07-25.md  validation-action-2025-07-28.md
docs/history/: README.md  action-log-upsert-health-probes-2025-08-01.md  analysis-action-2025-07-28.md  confidence-2025-07-30-alert.md  confidence-assessment-2025-07-28.md  confidence-decision-2025-07-25.md  dataflow-interaction-2025-07-28.md  dependencies-2025-07-30-alert.md  design-update-2025-07-30.md  (+18 more)
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
scripts/: add-health-probes.sh  azd-env-helper.sh  clear-network-failures.sh  inject-deployment-failure.sh  inject-network-failure.sh  list-network-failures.sh  list-revisions.sh  restore-deployment.sh
src/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
src/app/: __init__.py  azd_env.py  chaos.py  config.py  main.py  models.py  redis_client.py  telemetry.py
src/tests/: __init__.py  azd-env-helper.sh  azd_env_helper.py  conftest.py  run-integration-tests.sh
src/tests/e2e/: conftest.py  run-e2e-tests.sh  test_api_endpoints.py
src/tests/integration/: conftest.py  test_app_integration.py  test_basic_api.py  test_chaos_scenarios.py  test_end_to_end.py  test_redis_integration.py
src/tests/load/: locustfile.py  run-load-tests.sh
src/tests/load/scenarios/: baseline.py  chaos.py  stress.py
src/tests/unit/: conftest.py  test_chaos.py  test_main.py  test_redis_client.py  test_telemetry.py
(+73 files in other folders)
